# fitslog

./: __init__.py  __main__.py  pyproject.toml
fitlog/: __init__.py
fitlog/fastlog/: logger.py
